--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000" />
     <meta name="description" content="RisingCoin is a cryptocurrency platform with a play to earn game, Dex exchange base on multiple exchanges." />
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title>RSC Bot</title>
   </head>
   <body>
